@@ -58,7 +58,6 @@ sub execute {
         names      => [$self->tag_name, $self->change_name],
         all        => $self->all,
         args       => \@_,
-        no_default => 1,
         no_changes => 1,
     );
 
