@@ -47,6 +47,17 @@ Revision history for Perl extension App::Sqitch
      - Added support for a `$SQITCH_TARGET` environment variable, which takes
        precedence over all other target specifications except for command-line
        options and arguments. Thanks to @mvgrimes for the suggestion (#203).
+     - Fixed target/engine/change argument parsing so it won't automatically
+       fail when `core.engine` isn't set unless no targets are found. This
+       lets engines be determined strictly from command-line arguments --
+       derived from targets, or just listed on their own -- whether or not
+       `core.engine` is set. This chagnge eliminates the need for the
+       `no_default` parameter to the `parse_args()` method of App::Sqitch
+       Command. It also greatly reduces the need for the core `--engine`
+       option, which was previously required to work around this issue.
+     - Now that deriving the engine from arguments is always supported, the
+       error when no engine can be determined has been updated to suggest setting
+       the engine via the target.
 
 0.9998 2018-10-03T20:53:58Z
      - Fixed an issue where Sqitch would sometimes truncate the registry
